--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ alabaster==0.7.12
 Babel==2.6.0
 certifi==2018.11.29
 chardet==3.0.4
-Django==2.1.7
+Django>=2.2
 djangorestframework==3.9.1
 djangorestframework-stubs==0.4.2
 docutils==0.14
 idna==2.8
 imagesize==1.1.0
-Jinja2==2.10
+Jinja2==2.10.1
 MarkupSafe==1.1.1
 packaging==19.0
 Pygments==2.3.1
